# GUI-For-Unmanned-ground-vehicle-

./: DESIGN_FILE  README.md  new proj.sll  new proj.spj
CODE_FILE/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c  ui_helpers.h
CODE_FILE/ui/images/: ui_img_pentagon_logo_png.c  ui_img_settings_png.c
CODE_FILE/ui/screens/: ui_Screen1.c  ui_Screen2.c
CODE_FILES/: lv_conf.h
CODE_FILES/ui/: ui_events.h
CODE_FILES/ui/components/: ui_comp_hook.c
CODE_FILES/ui/images/: ui_img_battery_2_png.c
CODE_FILES/ui/screens/: ui_Screen3.c  ui_Screen4.c
